Integration test for ProductController - about to be done.